--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(power)
 add_subdirectory(util)
 add_subdirectory(container)
 add_subdirectory(osal)
+add_subdirectory(pus)
 add_subdirectory(serialize)
 add_subdirectory(datapoollocal)
 add_subdirectory(storagemanager)
