--- a/unittests/datapoollocal/CMakeLists.txt
+++ b/unittests/datapoollocal/CMakeLists.txt
@@ -1,6 +1,3 @@
-target_sources(${FSFW_TEST_TGT} PRIVATE
-	testLocalPoolVariable.cpp
-	testLocalPoolVector.cpp
-	testDataSet.cpp
-  testLocalPoolManager.cpp
-)
+target_sources(
+  ${FSFW_TEST_TGT} PRIVATE testLocalPoolVariable.cpp testLocalPoolVector.cpp
+                           testDataSet.cpp testLocalPoolManager.cpp)
