first dest handler unittests
- Add new mock class for event reporting proxies
- Add basic setup for unittesting the CFDP destination handler

--- a/unittests/mocks/CMakeLists.txt
+++ b/unittests/mocks/CMakeLists.txt
@@ -15,6 +15,7 @@ target_sources(
           CcsdsCheckerMock.cpp
           AcceptsTcMock.cpp
           StorageManagerMock.cpp
-          FilesystemMock.cpp)
+          FilesystemMock.cpp
+          EventReportingProxyMock.cpp)
 
 add_subdirectory(cfdp)
