--- a/automation/Dockerfile
+++ b/automation/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get --yes install gcc g++ cmake make lcov git valgrind nano iputils-ping
 
 RUN git clone https://github.com/catchorg/Catch2.git && \
 	cd Catch2 && \
-	git checkout v3.0.0-preview5 && \
+	git checkout v3.1.0 && \
 	cmake -Bbuild -H. -DBUILD_TESTING=OFF && \
 	cmake --build build/ --target install
 
