--- a/automation/Jenkinsfile
+++ b/automation/Jenkinsfile
@@ -41,15 +41,31 @@ pipeline {
             }
         }
         stage('Documentation') {
+            when {
+                branch 'development'
+            }
             steps {
-                echo env.BRANCH_NAME
                 dir(DOCDDIR) {
                     sh 'cmake -DFSFW_BUILD_DOCS=ON -DFSFW_OSAL=host ..'
                     sh 'make Sphinx'
                     sh 'cd docs/sphinx'
                     sshagent(credentials: ['documentation-buildfix']) {
-                        sh 'ssh -vvv buildfix@documents.intra.irs.uni-stuttgart.de uname -a'
                         sh 'scp -r ./* buildfix@documents.intra.irs.uni-stuttgart.de:/mnt/data/www/html/fsfw/development'
+                    }
+                }
+            }
+        }
+        stage('Master Documentation') {
+            when {
+                branch 'master'
+            }
+            steps {
+                dir(DOCDDIR) {
+                    sh 'cmake -DFSFW_BUILD_DOCS=ON -DFSFW_OSAL=host ..'
+                    sh 'make Sphinx'
+                    sh 'cd docs/sphinx'
+                    sshagent(credentials: ['documentation-buildfix']) {
+                        sh 'scp -r ./* buildfix@documents.intra.irs.uni-stuttgart.de:/mnt/data/www/html/fsfw/master'
                     }
                 }
             }
