--- a/unittests/cfdp/handler/CMakeLists.txt
+++ b/unittests/cfdp/handler/CMakeLists.txt
@@ -1,3 +1,2 @@
-target_sources(
-  ${FSFW_TEST_TGT} PRIVATE testDistributor.cpp testDestHandler.cpp
-                           testSourceHandler.cpp testFaultHandler.cpp)
+target_sources(${FSFW_TEST_TGT} PRIVATE testDistributor.cpp
+                                        testFaultHandler.cpp)
