add CFDP handlers manually

--- a/unittests/cfdp/handler/CMakeLists.txt
+++ b/unittests/cfdp/handler/CMakeLists.txt
@@ -1,2 +1,3 @@
-target_sources(${FSFW_TEST_TGT} PRIVATE testDistributor.cpp
-                                        testFaultHandler.cpp)
+target_sources(
+  ${FSFW_TEST_TGT} PRIVATE testDistributor.cpp testDestHandler.cpp
+                           testSourceHandler.cpp testFaultHandler.cpp)
