adding files manually

--- a/src/fsfw/tcdistribution/CMakeLists.txt
+++ b/src/fsfw/tcdistribution/CMakeLists.txt
@@ -1,9 +1,4 @@
 target_sources(
   ${LIB_FSFW_NAME}
-  PRIVATE CCSDSDistributor.cpp
-          PusDistributor.cpp
-          TcDistributor.cpp
-          PusPacketChecker.cpp
-          TcPacketCheckCFDP.cpp
-          CFDPDistributor.cpp
-          CcsdsPacketChecker.cpp)
+  PRIVATE CcsdsDistributor.cpp PusDistributor.cpp TcDistributorBase.cpp
+          PusPacketChecker.cpp TcPacketCheckCFDP.cpp CcsdsPacketChecker.cpp)
