all necessary modifications

--- a/src/fsfw/tcdistribution/CMakeLists.txt
+++ b/src/fsfw/tcdistribution/CMakeLists.txt
@@ -1,4 +1,4 @@
 target_sources(
   ${LIB_FSFW_NAME}
-  PRIVATE CcsdsDistributor.cpp PusDistributor.cpp TcDistributorBase.cpp
-          PusPacketChecker.cpp TcPacketCheckCFDP.cpp CcsdsPacketChecker.cpp)
+  PRIVATE CCSDSDistributor.cpp PusDistributor.cpp TcDistributor.cpp
+          TcPacketCheckCFDP.cpp CcsdsPacketChecker.cpp)
