refactoring and condition code to strin converter

--- a/src/fsfw/cfdp/CMakeLists.txt
+++ b/src/fsfw/cfdp/CMakeLists.txt
@@ -1,5 +1,5 @@
 target_sources(${LIB_FSFW_NAME} PRIVATE CfdpMessage.cpp CfdpDistributor.cpp
-                                        VarLenFields.cpp)
+                                        VarLenFields.cpp helpers.cpp)
 
 add_subdirectory(pdu)
 add_subdirectory(tlv)
