generic cfdp handler wrapper

--- a/src/fsfw/cfdp/handler/CMakeLists.txt
+++ b/src/fsfw/cfdp/handler/CMakeLists.txt
@@ -1,2 +1,2 @@
 target_sources(${LIB_FSFW_NAME} PRIVATE SourceHandler.cpp DestHandler.cpp
-                                        FaultHandlerBase.cpp UserBase.cpp)
+                                        FaultHandlerBase.cpp UserBase.cpp CfdpHandler.cpp)
