--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -17,5 +17,5 @@ jobs:
         id: mirror
         uses: bridgelightcloud/github-mirror-action@v2
         with:
-          origin: ''
+          origin: 'https://egit.irs.uni-stuttgart.de/fsfw/fsfw.git'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
