Revert "testing deployment of both development and master doc"
This reverts commit c0000a863595490d7a6c420c4b8729133bc2c263.

--- a/automation/Jenkinsfile
+++ b/automation/Jenkinsfile
@@ -64,7 +64,7 @@ pipeline {
         }
         stage('Master Documentation') {
             when {
-                branch 'mohr/documentation_ci'
+                branch 'master'
             }
             steps {
                 dir(DOCDDIR) {
